# scalingup

./: .gitignore  CHECKLIST.md  QUICKSTART.md  README.md  README.txt  build.bat  install.bat  pyproject.toml  requirements.txt  requirements_gpu.txt  run.bat  test.bat
app/: main.py
app/config/: __init__.py  presets.py  settings.py
app/core/: __init__.py  ffmpeg_handler.py  models.py  task_queue.py  upscale_image.py  upscale_video.py  worker.py
app/ui/: __init__.py  main_window.py
app/utils/: __init__.py  file_utils.py  gpu_utils.py
